<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/gray">
    <com.google.android.material.chip.ChipGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        android:id="@+id/groupChips"
        android:layout_gravity="center_horizontal">
        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chipResortEvropa"
            style="@style/CustomChipStyle"
            android:text="@string/Europe"/>
        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chipResortAsia"
            style="@style/CustomChipStyle"
            android:text="@string/Asia"/>
        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chipResortAmerika"
            style="@style/CustomChipStyle"
            android:text="@string/America"/>
        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chipResortAfrika"
            style="@style/CustomChipStyle"
            android:text="@string/Africa"/>
    </com.google.android.material.chip.ChipGroup>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewResort"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

</LinearLayout>