<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/gray">

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonProfileSignIn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@string/Authorization"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:visibility="gone"
        android:id="@+id/profile">

        <TextView
            android:id="@+id/textViewNameUserProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Иван" />

        <TextView
            android:id="@+id/textViewSurnameUserProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewNameUserProfile"
            tools:text="Иванович" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonPersonalDataProfile"
            style="@style/CustomButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Personal_Data"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="@+id/textViewSurnameUserProfile"
            app:layout_constraintTop_toBottomOf="@+id/textViewSurnameUserProfile" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:cardCornerRadius="15dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonSignOutProfile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonPersonalDataProfile">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/Book"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/cardView"
                app:layout_constraintEnd_toEndOf="@+id/cardView"
                app:layout_constraintStart_toStartOf="@+id/cardView" />

            <TextView
                android:id="@+id/textViewEmptyProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/oktyabrina_script"
                android:text="Пустота"
                android:textSize="40sp"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewBook"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="35dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/buttonSignOutProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SignOut"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/CustomButtonStyle"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>